Gradle stuff to get small JRE bundles working! Needs special JDK to bundle
You can get the special JDK for now at http://jdk.java.net/jpackage/ , but it should be part of OpenJDK 12 in a few weeks or months. If you aren't running the desktop `createFinalAppBundle` task, you probably don't need the special JDK. Thanks to Michael Hoffer for making the code used in the Gradle task (mostly, some changes were needed from Java 10 to Java 12) and Raymond Buckley for telling me about the surprisingly small final distributable sizes he got. Code is from https://github.com/raeleus/JavaPackager-Video .